--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,22 @@ button{
 button:hover{
     background-color:#0056b3;
 }
+table{
+    border-collapse:collapse;
+    display:flex;
+    justify-content:center;
+}
+th, td{
+    border:1px solid black;
+    padding:8px;
+    display:flex;
+    justify-content:center;
+}
+tr{
+
+}
+thead th{
+    width:25%;
+    display:flex;
+    justify-content:center;
+}
