--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body {
     font-family:Arial, sans-serif;
     text-align:center;
-    background-color:#f4f4f4;
     margin:0;
     padding:0;
+    background-color:#000000;
+    height: 100%;
+    width: 100%;
 }
 div{
     margin-top:50px;
@@ -15,12 +17,12 @@ button{
     cursor:pointer;
     border:none;
     border-radius:5px;
-    background-color:#007bff;
+    background-color:#D9D9D9;
     color:whote;
     transition:0.3s;
 }
 button:hover{
-    background-color:#0056b3;
+    background-color:#8a8a8a;
 }
 table{
     border-collapse:collapse;
@@ -31,13 +33,42 @@ th, td{
     padding:8px;
 
 }
-tr{
-
-}
 thead th{
     width:25%;
 }
 .organize-div{
     justify-content:center;
     display: flex;
+}
+.menu{
+    background-color:#f8f8f8;
+    border-style: solid;
+    border-width: 20px;
+    border-color:#D9D9D9;
+    border-radius:11%;
+    margin-top:4%;
+    margin-bottom:0%;
+    margin-left:35%;
+    margin-right:35%;
+    padding-top:1%;
+    padding-bottom: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+.input_tabela{
+    border-radius:20px;
+    padding-top:20px;
+    padding-left: 75%;
+    padding-right: 10%;
+    padding-bottom: 5%;
+    border:none;
+}
+.inputs_div{
+display: flex;
+align-items: center;
+justify-content:center;
+}
+.tabela{
+    background-color: #D9D9D9;
+    padding-top: 2%;
 }
